# polymarket-agent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  calibration_params.json
.claude/agents/: python-sidecar.md  rust-builder.md
.claude/commands/: next-phase.md  ralph-phase.md
docs/: api-reference.md  coinbase-agentic-wallets-research.md  usage-guide.md  weather-bias-fix-plan.md  weather-research.md
prompts/: fair_value.md
sidecar/: conftest.py  polymarket_client.py  requirements.txt  server.py  test_server.py
sidecar/weather/: calibration.py  hrrr.py  nbm.py  nws.py  open_meteo.py  probability_model.py  test_calibration.py  test_hrrr.py  test_nbm.py  test_nws.py  test_open_meteo.py  test_probability_model.py  test_wu_scraper.py  wu_scraper.py
src/: accounting.rs  clob_client.rs  config.rs  dashboard.rs  db.rs  edge_detector.rs  estimator.rs  executor.rs  lib.rs  main.rs  market_scanner.rs  position_manager.rs  position_sizer.rs  sidecar.rs  weather_client.rs  websocket.rs
src/data_sources/: openclaw.rs
static/: dashboard.html
tasks/: current-phase.md  lessons.md
tests/: integration.rs
