[package]
name = "polymarket-agent"
version = "0.1.0"
edition = "2021"
description = "Autonomous Polymarket trading agent with survival mechanic"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Web server + WebSocket (for dashboard)
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "auth"] }

# Environment / config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
regex = "1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.6"       # HTTP mocking for API tests
tempfile = "3"         # Temp dirs for SQLite test databases

[profile.release]
opt-level = 3
lto = true
strip = true
